# physlab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  command.ui  environment.yml  environment_interactive.yml  instrument.py  main.py  main.ui  plotting.py  plotting.ui  pyproject.toml  requirements.txt  start.bat
